--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
-## Build generated
+.DS_Store
 build/
-DerivedData
-
-## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -15,13 +9,14 @@ DerivedData
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 xcuserdata
-
-## Other
-*.xccheckout
+profile
 *.moved-aside
-*.xcuserstate
-*.xcscmblueprint
+DerivedData
+.idea/
+.vscode/
 
 ## Obj-C/Swift specific
 *.hmap
